k8s/phm/nifi/p4.5/nifi-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifiline1
  namespace: nifi-namespace
spec:
  selector:
    matchLabels:
      app: nifiline1
  serviceName: nifi-headless-line1
  replicas: 2
  template:
    metadata:
      labels:
        app: nifiline1
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      containers:
      - name: nifiline1
        imagePullPolicy: IfNotPresent
        image: plt/nifi-cloud:v0.0.1
        resources:
          requests:
            memory: "2Gi"
            cpu: "0.2"
        ports:
        - containerPort: 8080
          name: web
#          hostPort: 8989
        volumeMounts:
        - name: nifissdir
          mountPath: /opt/data
        - name: logback
          mountPath: /opt/nifi-1.7.1/conf/logback.xml
          subPath: logback.xml
      volumes:
        - name: logback
          configMap:
            name: nifi-p1
            items:
            - key: logback.xml
              path: logback.xml
  volumeClaimTemplates:
  - metadata:
      name: nifissdir
      annotations:
        volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
