k8s/phm/nifi/p4.5/nifi-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-headless-line1
  labels:
    app: nifi-headless-line1
  namespace: nifi-namespace
spec:
  ports:
  - port: 8080
    name: web
    targetPort: web
  clusterIP: None
  selector:
    app: nifiline1
