k8s/phm/nifi/p4.5/nifi-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-nifi-line1
  namespace: nifi-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /nifi
spec:
  rules:
    - http:
        paths:
          - path: /something
            backend:
              serviceName: nifi-headless-line1
              servicePort: web
#          - path: /nifi-api
#            backend:
#              serviceName: nifi-services
#              servicePort: web
